<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">欢迎使用</string>
    <string name="user">用户</string>
    <string name="phone">请输入手机号</string>
    <string name="phone1">手机号格式错误</string>
    <string name="password">密码</string>
    <string name="password_label">请输入密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="passw1">确认密码</string>
    <string name="esc">返回</string>
    <string name="title">首页</string>
    <string name="lo_re">登陆/注册</string>
    <string name="root_login">管理员登录</string>
    <string name="community_service">社区服务</string>
    <string name="resident_login">住户登录</string>
    <string name="_1">天天学习丨中南海月刊（2024.02）</string>
    <string name="todo">TODO</string>
    <string name="we">欢迎</string>
    <string name="yzm">手机验证码登录</string>
    <string name="yz">验证码</string>
    <string name="yz1">请输入验证码</string>
    <string name="pwd">包含数字、英文字母和特殊符号（至少两种）的8位密码</string>
    <string name="use">用户名和密码不能为空</string>
    <string name="us">请输入姓名</string>
    <string name="idc">身份证格式错误</string>
    <string name="mandm">密码和确认密码不匹配</string>
    <string name="mm">用户名或密码错误</string>
    <string name="zhaobudao">找不到该用户，请注册</string>
    <string name="userno">用户已存在</string>
    <string name="name">姓名</string>
    <string name="uname">请输入姓名</string>
    <string name="house_number">门牌号</string>
    <string name="house_number1">请输入门牌号</string>
    <string name="id">身份证</string>
    <string name="id1">请输入身份证</string>
    <string name="gr">个人信息</string>
    <string name="root">管理员</string>
    <string name="rootedit">请输入管理员账户</string>
    <string name="date">最近一次登陆时间</string>
    <string name="phon">手机号</string>
    <string name="hose">门牌号</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="update">修改个人信息</string>
    <string name="save">保存</string>
    <string name="nomodifications">没有修改内容</string>
    <string name="usercommunity">管理用户信息</string>
    <string name="delect">删除</string>
    <string name="search">查找</string>
    <string name="ex">快递服务</string>
    <string name="coom">社区交流</string>
    <string name="upphone">更改手机号</string>
    <string name="map">地图导航</string>
    <string name="token">临时验证码：</string>
    <string name="take">取件</string>
    <string name="lsyzm">临时验证码</string>
    <string name="you">请输入信息</string>
    <string name="liuyan">留言</string>
    <string name="liuyanlan">留言栏</string>
    <string name="infophone">需要修改的手机号</string>
    <string name="updatePhone">修改手机号</string>
    <string name="updatephone">修改后的手机号</string>
</resources>