<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d1">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#66ccff">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/todo" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:background="#66ccff"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="60dp"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:minHeight="48dp"
        android:hint="@string/uname" />

    <TextView
        android:id="@+id/phone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="60dp"
        android:text="@string/user"
        android:textColor="#000"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/phone"
        android:layout_width="200dp"
        android:inputType="phone"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="150dp"
        android:hint="@string/phone"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginStart="60dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginStart="120dp"
        android:minHeight="48dp"
        android:inputType="textPassword"
        android:autofillHints=""
        android:hint="@string/password_label" />

    <TextView
        android:id="@+id/password_label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/passw1"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginTop="50dp"
        android:layout_marginStart="120dp"
        android:minHeight="48dp"
        android:inputType="textPassword"
        android:autofillHints=""
        android:hint="@string/password_label" />

    <TextView
        android:id="@+id/house_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:text="@string/house_number"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/house_number1"
        android:layout_width="200dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:hint="@string/house_number1"
        android:minHeight="48dp" />
    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginStart="35dp"
        android:layout_marginTop="150dp"
        android:text="@string/id"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/id1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginTop="150dp"
        android:layout_marginStart="120dp"
        android:minHeight="48dp"
        android:autofillHints=""
        android:hint="@string/id1" />
    <TextView
        android:id="@+id/contact_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginStart="35dp"
        android:layout_marginTop="200dp"
        android:text="@string/yz"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/contact_number1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginTop="200dp"
        android:layout_marginStart="120dp"
        android:minHeight="48dp"
        android:autofillHints=""
        android:hint="@string/yz1" />
    <android.widget.Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/button_background_selector"
        android:text="@string/register"
        android:textSize="25sp" />

    <android.widget.Button
        android:id="@+id/esc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="265dp"
        android:background="@drawable/button_background_selector"
        android:text="@string/esc"
        android:textSize="25sp" />

</RelativeLayout>