<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#66ccff">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#66ccff"
            android:text="@string/gr"
            android:textSize="30sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TableLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*"
        android:layout_marginTop="100dp">

        <TableRow
            android:background="@drawable/table_row_border">

            <TextView
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="300dp"

                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:background="@drawable/table_row_border">

            <TextView
                android:padding="10dp"

                android:text="@string/id" />

            <EditText
                android:id="@+id/et_id"
                android:padding="10dp" />
        </TableRow>
        <TableRow
            android:background="@drawable/table_row_border">

            <TextView
                android:padding="10dp"
                android:text="@string/infophone" />

            <EditText
                android:id="@+id/et_contact_number"
                android:padding="10dp" />
        </TableRow>
        <TableRow
            android:background="@drawable/table_row_border">

            <TextView
                android:padding="10dp"
                android:text="@string/updatephone" />

            <EditText
                android:id="@+id/et_contact_number1"
                android:padding="10dp" />
        </TableRow>

    </TableLayout>
    <Button
        android:id="@+id/btn_edit"
        android:layout_marginTop="20dp"
        android:layout_gravity="right"
        android:layout_marginEnd="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updatePhone"
        tools:ignore="RtlHardcoded" />
</LinearLayout>
