<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    android:background="@drawable/d">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#66ccff">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/todo" />
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:background="#66ccff"
        android:text="@string/we"
        android:textSize="30sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/touxiang"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/touxiang"/>

    <TextView
        android:id="@+id/phone1"
        style="@style/wm_hw"
        android:layout_below="@id/touxiang"
        android:layout_marginStart="60dp"
        android:text="@string/user"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/touxiang"
        android:layout_marginStart="120dp"
        android:minHeight="48dp"
        android:hint="@string/phone"
        android:autofillHints=""
       />

    <TextView
        android:id="@+id/password_label"
        style="@style/wm_hw"
        android:layout_below="@id/phone"
        android:layout_marginStart="60dp"
        android:layout_marginTop="-2dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:hint="@string/password_label"
        android:layout_marginStart="120dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints="" />


    <android.widget.Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background_selector"
        android:text="@string/login"
        android:textSize="25sp" />

    <android.widget.Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:background="@drawable/button_background_selector"
        android:text="@string/register"
        android:textSize="25sp" />



</RelativeLayout>