<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#66ccff">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#66ccff"
            android:text="@string/liuyanlan"
            android:textSize="30sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/message_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:padding="16dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/new_message_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_board"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/custom_lighter_gray"
        android:hint="@string/you"
        android:padding="16dp" />

    <Button
        android:id="@+id/post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_message_input"
        android:layout_centerHorizontal="true"
        android:text="@string/liuyan"
        android:padding="12dp"
        android:background="@android:color/holo_blue_light" />

</RelativeLayout>
